Make sure 'scroll down' arrow is actually hidden on small screens.

--- a/style.css
+++ b/style.css
@@ -1272,7 +1272,7 @@ body {
 
 /* Scroll down arrow */
 
-.menu-scroll-down {
+.navigation-top .menu-scroll-down {
 	display: none;
 }
 
